--- a/apps/system/style/chrome/chrome.css
+++ b/apps/system/style/chrome/chrome.css
@@ -98,7 +98,7 @@
 }
 
 .chrome .controls .urlbar .title {
-  width: calc(100% - 3.2rem);
+  width: auto;
   padding-left: 1rem;
   box-sizing: padding-box;
   overflow: hidden;
@@ -106,13 +106,13 @@
   font-weight: 300;
   font-size: 2rem;
   float: none;
-  background-color: rgba(51,51,51,0.5);
+  background-color: transparent;
   border-radius: 1.8rem;
   text-overflow: ellipsis;
 }
 
 .appWindow.light .chrome:not(.maximized) .controls .urlbar .title {
-  background-color: rgba(201,201,201,0.4);
+  background-color: transparent;
 }
 
 .maximized .controls .urlbar .title {
