--- a/apps/system/style/app_titlebar.css
+++ b/apps/system/style/app_titlebar.css
@@ -25,12 +25,18 @@
   width: 100%;
 }
 
+
+/*.appWindow div.title {
+  visibility: hidden !important;
+}*/
+
 .appWindow .titlebar .titlebar-minimized {
-  background-image: -moz-element(#statusbar-minimized);
-  background-size: cover;
-  width: calc(100% - 100% * 0.6521 + 8rem * 0.6521 - 0.5rem);
-  right: 0;
-  position: absolute;
+  /* TODO - Bug 1042105. Add here the minified statusbar id */
+  background-image: -moz-element(#statusbar);
+
+  /* TODO - Bug 1042105. Add here the minified size of the statusbar */
+  width: 100%;
+  margin-left: 0;
 }
 
 /* Transitions between the maximized / minimized status bars */
