--- a/apps/system/style/quick_settings/quick_settings.css
+++ b/apps/system/style/quick_settings/quick_settings.css
@@ -3,20 +3,26 @@
   pointer-events: none;
 }
 
-#quick-settings > li {
+#quick-settings > ul {
   padding: 0 1.5rem;
   margin: 0;
   list-style: none;
 }
 
-#quick-settings ul {
+#quick-settings li {
   float: left;
   width: 20%;
   padding: 0;
   margin: 0;
 }
 
-#quick-settings.non-mobile ul {
+#quick-settings li.quick-settings-long-button {
+  width: 100%;
+  height: 4rem;
+  vertical-align: middle;
+}
+
+#quick-settings.non-mobile li {
   width: 25%;
 }
 
@@ -35,12 +41,39 @@
   pointer-events: auto;
 }
 
+#quick-settings li.quick-settings-long-button a {
+  height: 3rem;
+  line-height: 1rem;
+  width: 50%;
+  margin: 0px auto;
+  float: none;
+  clear: both;
+  padding: 0rem 0px;
+  vertical-align: middle;
+  position: relative;
+  top: 0.6rem;
+  border-top: .1rem solid rgba(255, 255, 255, .05);
+}
+
 #quick-settings a:before {
   line-height: 4rem;
 }
 
+#quick-settings li.quick-settings-long-button a:before {
+  line-height: 3rem;
+  font-size: 2.4rem;
+  opacity: 0.5;
+  position: relative;
+  top: 0.2rem;
+  left: -0.7rem;
+}
+
 #quick-settings > *[data-initializing] {
   opacity: 0.5;
+}
+
+#quick-settings-orientation-lock[data-enabled="true"] {
+  color: #008eab;
 }
 
 #quick-settings-wifi[data-enabled] {
