--- a/apps/system/style/utility_tray/utility_tray.css
+++ b/apps/system/style/utility_tray/utility_tray.css
@@ -50,7 +50,8 @@
 }
 
 #utility-tray-footer {
-  background: hsla(0, 0%, 100%, .05);
+  background: none repeat scroll 0% 0% rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.25) inset;
 }
 
 #utility-tray > #utility-tray-grippy {
