--- a/apps/system/style/cards_view/cards_view.css
+++ b/apps/system/style/cards_view/cards_view.css
@@ -5,7 +5,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  transition: opacity 0.5s ease, visibility 0.5s ease;
+  transition: opacity 0.35s ease, visibility 0.35s ease;
   opacity: 0;
   -moz-user-select: none;
   overflow: hidden;
@@ -220,10 +220,11 @@
   border-bottom: none;
   border-radius: 2.2rem;
   z-index: 999;
-  transition: 1s ease;
+  transition: 0.25s ease;
 }
 #modui-cards-button-close-all.active {
-  transform: scale(1.25, 1.25);
+  transform: scale(1.35, 1.35);
+  opacity: 0;
 }
 #cards-view.empty #modui-cards-button-close-all {
   display: none;
