--- a/apps/system/style/cards_view/cards_view.css
+++ b/apps/system/style/cards_view/cards_view.css
@@ -5,7 +5,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  transition: opacity 0.35s ease, visibility 0.35s ease;
+  transition: opacity 0.5s ease, visibility 0.5s ease;
   opacity: 0;
   -moz-user-select: none;
   overflow: hidden;
@@ -66,11 +66,9 @@
 
 /* modUI ;; additional transition effect */
 #cards-view.modui-close-all-transition ul {
-  transition: transform 0.5s ease;
-  perspective: 500;
-  transform-origin: top center;
-  transform-style: preserve-3d;
-  transform: rotateX(90deg);
+  transition: 0.25s ease;
+  transform: scale(0);
+  opacity: 0.5;
 }
 
 #cards-view .card {
