--- a/apps/system/style/notifications/notifications.css
+++ b/apps/system/style/notifications/notifications.css
@@ -143,7 +143,7 @@
   transform: translateY(-5rem);
   transition: transform .2s ease-in-out;
   opacity: 1;
-  background-color: #000;
+  background-color: transparent;
 }
 
 :not(.unread) .displayed #notifications-indicator {
